# laba2

./: .gitignore  .history  .pre-commit-config.yaml  README.md  pyproject.toml
src/: cat.py  cd.py  cp.py  grep.py  history.py  log.py  ls.py  main.py  mv.py  paths.py  rm.py  tar.py  untar.py  unzip.py  zip.py
tests/: test_archive_history.py  test_cp_mv_rm.py  test_grep.py  test_ls_cd_cat.py
